Pipeline to inject data in chart components

--- a/src/app/components/charts/chart-cards/chart-cards.component.html
+++ b/src/app/components/charts/chart-cards/chart-cards.component.html
@@ -12,12 +12,12 @@
                 <canvas mdbChart
                     height="197"
                     width="394"
-                    [chartType]="chart3Type"
-                    [datasets]="chart3Datasets"
+                    [chartType]="blockChartType"
+                    [datasets]="blockChartDatasets"
                     [labels]="chartLabels"
-                    [options]="chart1Options"
+                    [options]="radarChartOptions"
                     [legend]="true"
-                    [colors]="chart3Colors">
+                    [colors]="blockChartColors">
                 </canvas>
             </div>
             <!--/Card image-->  
@@ -44,12 +44,12 @@
                 <canvas mdbChart
                     height="197"
                     width="394"
-                    [chartType]="chart2Type"
-                    [datasets]="chart2Datasets"
+                    [chartType]="commissionChartType"
+                    [datasets]="commissionChartDatasets"
                     [labels]="chartLabels"
-                    [options]="chart2Options"
+                    [options]="commissionChartOptions"
                     [legend]="true"
-                    [colors]="chart2Colors">
+                    [colors]="commissionChartColors">
             </canvas>
             </div>
             <!--/Card image-->  
@@ -76,12 +76,12 @@
                 <canvas mdbChart
                     height="197"
                     width="394"
-                    [chartType]="chart1Type"
-                    [data]="chart1Datasets"
+                    [chartType]="radarChartType"
+                    [data]="radarChartDatasets"
                     [labels]="chartLabels"
-                    [options]="chart1Options"
+                    [options]="radarChartOptions"
                     [legend]="true"
-                    [colors]="chart1Colors">
+                    [colors]="radarChartColors">
                 </canvas>
             </div>
             <!--/Card image-->  
