--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -2,26 +2,56 @@
   <mdb-carousel [isControls]="true" class="carousel-multi-item multi-animation" [type]="'carousel-multi-item'" [interval]="'0'"
 [animation]="'slide'">
   <mdb-carousel-item *ngFor="let item of slides; let i = index">
-    <div class="row">
+    <!-- ----------- old card ------------- -->
+    <!-- <div class="row">
       <div class="col-md-2" [ngClass]="{'d-none d-md-block': cardIndex !== 0}" *ngFor="let card of item; let cardIndex = index">
         <mdb-card cascade="true">
-            <!--Card image-->
             <div class="view view-cascade gradient-card-header purple-gradient">
             <h1 class="responsive-font-size">{{card.data}}</h1>
             <p class="responsive-font-size">{{card.title}}</p>
             </div>
-            <!--/Card image-->
             <mdb-card-body cascade="true" class="text-center">
-            <!--Card content-->
             <mdb-card-text class="responsive-font-size">
                 <br>
                 Updated at {{card.timestamp}}
             </mdb-card-text>
             </mdb-card-body>
-            <!--/.Card content-->
         </mdb-card>
       </div>
+    </div> -->
+    <!-- ----------- old card end ------------- -->
+
+    <!-- ----------- staus card ------------- -->
+    <div class="row">
+       <!--Grid column-->
+       <div class="col-xl-3 col-md-6 my-4" [ngClass]="{'d-none d-md-block': cardIndex !== 0}" *ngFor="let card of item; let cardIndex = index">
+        <!--Card-->
+        <div class="card card-cascade cascading-admin-card">
+            <!--Card Data-->
+            <div class="admin-up">
+                <mdb-icon fas icon="chart-line" class="indigo"></mdb-icon>
+                <div class="data">
+                    <p>{{card.title}}</p>
+                    <h4><strong>{{card.data}}</strong></h4>
+                </div>
+            </div>
+            <!--/.Card Data-->
+
+            <!--Card content-->
+            <div class="card-body card-body-cascade">
+                <!-- <div class="progress">
+                    <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div> -->
+                <!--Text-->
+                <p class="card-text">some text here</p>
+            </div>
+            <!--/.Card content-->
+        </div>
+        <!--/.Card-->
+      </div>
+      <!--Grid column-->
     </div>
+    <!-- ----------- staus card end ------------- -->
   </mdb-carousel-item>
 </mdb-carousel>
 </div>
