--- a/src/app/components/validator/validator.component.scss
+++ b/src/app/components/validator/validator.component.scss
@@ -27,3 +27,18 @@
 .row {
   max-width: 90%;
 }
+
+.testimonial-card {
+  max-width: 100%;
+  // max-height: 800px;
+  margin-bottom: 0;
+}
+
+.card-title h1 {
+  color: #4a4a4a;
+}
+
+a {
+  color: #4a4a4a;
+  // font-size: 200%;
+}
