removed rendering of validator detail on main page.

--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -208,7 +208,7 @@
     <main>
         <body>
             <app-status-bar></app-status-bar>
-            <app-validator></app-validator>
+            <!-- <app-validator></app-validator> -->
             <!-- <app-carousel></app-carousel> -->
             <!-- <app-test></app-test> -->
             <router-outlet></router-outlet>
