WiP: Commission chart data proccessing pipeline hooked up

--- a/src/app/components/charts/chart-cards/chart-cards.component.html
+++ b/src/app/components/charts/chart-cards/chart-cards.component.html
@@ -14,7 +14,7 @@
                     width="394"
                     [chartType]="blockChartType"
                     [datasets]="blockChartDatasets"
-                    [labels]="chartLabels"
+                    [labels]="blockChartLabels"
                     [options]="radarChartOptions"
                     [legend]="true"
                     [colors]="blockChartColors">
@@ -46,7 +46,7 @@
                     width="394"
                     [chartType]="commissionChartType"
                     [datasets]="commissionChartDatasets"
-                    [labels]="chartLabels"
+                    [labels]="commissionChartLabels"
                     [options]="commissionChartOptions"
                     [legend]="true"
                     [colors]="commissionChartColors">
@@ -78,7 +78,7 @@
                     width="394"
                     [chartType]="radarChartType"
                     [data]="radarChartDatasets"
-                    [labels]="chartLabels"
+                    [labels]="radarChartLabels"
                     [options]="radarChartOptions"
                     [legend]="true"
                     [colors]="radarChartColors">
