--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -43,7 +43,7 @@
                     <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div> -->
                 <!--Text-->
-                <p class="card-text">last updated:</p>
+                <p class="card-text">last updated: {{card.timestamp}}</p>
             </div>
             <!--/.Card content-->
         </div>
