--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -19,9 +19,11 @@
 
       <ng-container matColumnDef="hash" sticky>
         <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-pound"></i>Hash</th>
-        <td mat-cell *matCellDef="let tx" mdbPopover="{{tx.hash}}"
-        placement="top"
-        triggers="focus" mdbWavesEffect> {{tx.hash | slice:0:15 }}... </td>
+        <td mat-cell *matCellDef="let tx" mdbWavesEffect> 
+          <span matTooltip="tx.hash" matTooltipPosition="above">
+            {{tx.hash | slice:0:15 }}... <i class="ion-ios-copy-outline copy-button" style="cursor: pointer;" ngxClipboard [cbContent]="tx.hash"></i>
+          </span>
+          </td>
       </ng-container>
 
       <ng-container matColumnDef="type">
