--- a/src/app/theme.scss
+++ b/src/app/theme.scss
@@ -3,7 +3,7 @@
 @include mat-core();
 
 $app-primary: mat-palette($mat-indigo, 500, 100, 700);
-$app-accent:  mat-palette($mat-amber, A200, A100, A400);
+$app-accent:  mat-palette($mat-amber, A400, A200, A700);
 
 $app-theme: mat-light-theme($app-primary, $app-accent);
 
@@ -25,4 +25,4 @@ $app-theme: mat-light-theme($app-primary, $app-accent);
 
 
 // Include the mixin
-@include mix-app-theme($app-theme);
+@include angular-material-theme($app-theme);
