--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -21,7 +21,7 @@
         <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-pound"></i>Hash</th>
         <td mat-cell *matCellDef="let tx" mdbWavesEffect> 
           <span matTooltip="tx.hash" matTooltipPosition="above">
-            {{tx.hash | slice:0:15 }}... <i class="ion-ios-copy-outline copy-button" style="cursor: pointer;" ngxClipboard [cbContent]="tx.hash" (click)="showSuccess()"></i>
+            {{tx.hash | slice:0:15 }}... <i class="ion-ios-copy copy-button" style="cursor: pointer;" ngxClipboard [cbContent]="tx.hash" (click)="showSuccess()"></i>
           </span>
           </td>
       </ng-container>
@@ -191,7 +191,9 @@
       <mat-paginator [hidePageSize]="true" [pageSizeOptions]="[100]"></mat-paginator>
     </div> -->
   </div>
-  <button mdbBtn (click)="displayOlderTxs();" type="button" color="primary" block="true" mdbWavesEffect>Show More</button>
+  <div class="button-row">
+    <button class="show-more" mdbBtn (click)="displayOlderTxs();" type="button" color="indigo" size="sm" block="true" mdbWavesEffect>Show More</button>
+  </div>
 </span>
 <ng-template #elseLoading>
   <div style="display: flex; justify-content: center;">
