--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -108,7 +108,7 @@
                   </li>
                   <li *ngIf="tx.delegator && tx.delegator[i]" class="list-group-item d-flex justify-content-between align-items-center">
                     Delegator:
-                    <span class="badge badge-primary badge-pill">
+                    <span style="cursor:pointer;" (click)="openTxsListDialog(tx.delegator[i])" class="badge badge-primary badge-pill">
                       <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.delegator[i] ) : false; else elseDelegator">
                         {{ (appState | async).valsMap.get( tx.delegator[i] )}}
                       </span>
