--- a/src/app/components/txs/txs-list-card/txs-list-card.component.html
+++ b/src/app/components/txs/txs-list-card/txs-list-card.component.html
@@ -1,34 +1,55 @@
-<div class="row mat-elevation-z8 scrollbar-primary table-responsive text-nowrap">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
-
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-    
-      <!-- Position Column -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef class="th-lg"> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-      </ng-container>
-    
-      <!-- Name Column -->
-      <ng-container matColumnDef="name" sticky>
-        <th mat-header-cell *matHeaderCellDef class="th-lg"> Delegator </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-    
-      <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef class="th-lg"> Amount </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-      </ng-container>
-    
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef class="th-lg"> Percentage </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-      </ng-container>
-    
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-</div>
+<section class="section">
+  <div class="row main-row">
+    <div class="col-md-12">
+      <mat-card alignment="left">
+        <mat-card-title>Account: {{address}}</mat-card-title>
+        <mat-card-subtitle>Transactions (last 100)</mat-card-subtitle>
+          <div class="card-body">
+            <mat-tab-group (selectedTabChange)="onTabChange($event);">
+              <mat-tab label="Staking">
+                <table mat-table [dataSource]="dataSource" class="table large-header">
+                  <ng-container matColumnDef="hash">
+                    <th mat-header-cell *matHeaderCellDef> Hash </th>
+                    <td mat-cell *matCellDef="let tx">
+                      {{ tx.txhash }}
+                    </td>
+                  </ng-container>
+              
+                  <ng-container matColumnDef="height">
+                    <th mat-header-cell *matHeaderCellDef> Height </th>
+                    <td mat-cell *matCellDef="let tx"> 
+                      {{ tx.height }} 
+                    </td>
+                  </ng-container>
+              
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+              </mat-tab>
+              <mat-tab label="Transfer">
+                <table mat-table [dataSource]="dataSource" class="table large-header">
+                  <ng-container matColumnDef="hash">
+                    <th mat-header-cell *matHeaderCellDef> Hash </th>
+                    <td mat-cell *matCellDef="let tx">
+                      {{ tx.txhash }}
+                    </td>
+                  </ng-container>
+              
+                  <ng-container matColumnDef="height">
+                    <th mat-header-cell *matHeaderCellDef> Height </th>
+                    <td mat-cell *matCellDef="let tx"> 
+                      {{ tx.height }} 
+                    </td>
+                  </ng-container>
+              
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+              </mat-tab>
+            </mat-tab-group>
+          <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+      </mat-card>
+    </div>
+  </div>
+</section>
