--- a/src/app/components/txs/txs-list-card/txs-list-card.component.scss
+++ b/src/app/components/txs/txs-list-card/txs-list-card.component.scss
@@ -1,45 +1,87 @@
+.main-row {
+  max-width: 1200px;
+  margin:0 auto;
+  max-height: 600px;
+}
+
 .row {
-    width: 900px;
-    max-width: 100%;
-    margin-bottom: 20px;
+  margin: 0 auto;
 }
 
-table {
-    // width: 100%;
-    min-width: 100%;
+.row-2 {
+  margin-top: 30px;
 }
 
-/* mat-table */
-.mat-row:nth-child(even){
-    background-color:#0D151F;
+mat-card {
+  max-width: 100%;
+  background-color: white;
+  width: 800px;
 }
 
-.mat-row:nth-child(odd){
-  background-color:#111923;
+li {
+  max-height: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.mat-header-cell, .mat-cell {
-  font-size: 20px;
-  font-family: 'Lato', 'Arial', sans-serif;
+.voters-list {
+  max-height: 200px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.proposal-title {
   font-weight: 300;
-  text-rendering: optimizeLegibility;
-  vertical-align: middle;
+  font-size: 120%;
 }
 
-.mat-header-cell {
-  color: #ffffff;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-color: white;
+.card.card-cascade {
+  .view {
+      box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.15), 0 3px 12px 0 rgba(0, 0, 0, 0.15);
+  }
 }
 
-.mat-cell {
-  color: #F7F7F7;
-}
+// .row {
+//     width: 900px;
+//     max-width: 100%;
+//     margin-bottom: 20px;
+// }
 
-.mat-header-row {
-  background-color: #3F51B5;
-}
+// table {
+//     min-width: 100%;
+// }
+
+// .mat-row:nth-child(even){
+//     background-color:#0D151F;
+// }
+
+// .mat-row:nth-child(odd){
+//   background-color:#111923;
+// }
+
+// .mat-header-cell, .mat-cell {
+//   font-size: 20px;
+//   font-family: 'Lato', 'Arial', sans-serif;
+//   font-weight: 300;
+//   text-rendering: optimizeLegibility;
+//   vertical-align: middle;
+// }
+
+// .mat-header-cell {
+//   color: #ffffff;
+//   border-bottom-style: solid;
+//   border-bottom-width: 1px;
+//   border-color: white;
+// }
+
+// .mat-cell {
+//   color: #F7F7F7;
+// }
+
+// .mat-header-row {
+//   background-color: #3F51B5;
+// }
 
 //   th:nth-child(1) {
 //     width: 5%;
