--- a/src/app/components/governance/gov-detail/gov-detail.component.html
+++ b/src/app/components/governance/gov-detail/gov-detail.component.html
@@ -184,114 +184,119 @@
                     <div class="card-body">
                       <mat-tab-group (selectedTabChange)="onTabChange($event);">
                         <mat-tab label="All">
-                          <table mat-table [dataSource]="votesDataSource" class="table large-header">
-                            <ng-container matColumnDef="voter">
-                              <th mat-header-cell *matHeaderCellDef> Voter </th>
-                              <td mat-cell *matCellDef="let vote">
-                                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( vote.voter ) : false; else elseVetoVoter">
-                                  {{ (appState | async).valsMap.get( vote.voter )}}
-                                </span>
-                                <ng-template #elseVetoVoter>{{ vote.voter }}</ng-template>
-                              </td>
-                            </ng-container>
-                        
-                            <ng-container matColumnDef="vote">
-                              <th mat-header-cell *matHeaderCellDef> Vote </th>
-                              <td mat-cell *matCellDef="let vote"> {{vote.option}} </td>
-                            </ng-container>
-                        
-                            <tr mat-header-row *matHeaderRowDef="votesDisplayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: votesDisplayedColumns;"></tr>
-                          </table>
-                          <!-- <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator> -->
+                          <div class="row table-responsive text-nowrap scrollbar-primary">
+                            <table mat-table [dataSource]="votesDataSource" class="table large-header">
+                              <ng-container matColumnDef="voter">
+                                <th mat-header-cell *matHeaderCellDef> Voter </th>
+                                <td mat-cell *matCellDef="let vote">
+                                  <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( vote.voter ) : false; else elseVetoVoter">
+                                    {{ (appState | async).valsMap.get( vote.voter )}}
+                                  </span>
+                                  <ng-template #elseVetoVoter>{{ vote.voter }}</ng-template>
+                                </td>
+                              </ng-container>
+                          
+                              <ng-container matColumnDef="vote">
+                                <th mat-header-cell *matHeaderCellDef> Vote </th>
+                                <td mat-cell *matCellDef="let vote"> {{vote.option}} </td>
+                              </ng-container>
+                          
+                              <tr mat-header-row *matHeaderRowDef="votesDisplayedColumns"></tr>
+                              <tr mat-row *matRowDef="let row; columns: votesDisplayedColumns;"></tr>
+                            </table>
+                          </div>
                         </mat-tab>
                         <mat-tab label="Yes">
-                          <table mat-table [dataSource]="votesDataSource" class="table large-header">
-                            <ng-container matColumnDef="voter">
-                              <th mat-header-cell *matHeaderCellDef> Voter </th>
-                              <td mat-cell *matCellDef="let vote"> 
-                                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( vote.voter ) : false; else elseVetoVoter">
-                                  {{ (appState | async).valsMap.get( vote.voter )}}
-                                </span>
-                                <ng-template #elseVetoVoter>{{ vote.voter }}</ng-template>
-                              </td>
-                            </ng-container>
-                        
-                            <ng-container matColumnDef="vote">
-                              <th mat-header-cell *matHeaderCellDef> Vote </th>
-                              <td mat-cell *matCellDef="let vote"> {{vote.option}} </td>
-                            </ng-container>
-                        
-                            <tr mat-header-row *matHeaderRowDef="votesDisplayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: votesDisplayedColumns;"></tr>
-                          </table>
-                          <!-- <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator> -->
+                          <div class="row table-responsive text-nowrap scrollbar-primary">
+                            <table mat-table [dataSource]="votesDataSource" class="table large-header">
+                              <ng-container matColumnDef="voter">
+                                <th mat-header-cell *matHeaderCellDef> Voter </th>
+                                <td mat-cell *matCellDef="let vote"> 
+                                  <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( vote.voter ) : false; else elseVetoVoter">
+                                    {{ (appState | async).valsMap.get( vote.voter )}}
+                                  </span>
+                                  <ng-template #elseVetoVoter>{{ vote.voter }}</ng-template>
+                                </td>
+                              </ng-container>
+                          
+                              <ng-container matColumnDef="vote">
+                                <th mat-header-cell *matHeaderCellDef> Vote </th>
+                                <td mat-cell *matCellDef="let vote"> {{vote.option}} </td>
+                              </ng-container>
+                          
+                              <tr mat-header-row *matHeaderRowDef="votesDisplayedColumns"></tr>
+                              <tr mat-row *matRowDef="let row; columns: votesDisplayedColumns;"></tr>
+                            </table>
+                          </div>
                         </mat-tab>
                         <mat-tab label="No">
-                          <table mat-table [dataSource]="votesDataSource" class="table large-header">
-                            <ng-container matColumnDef="voter">
-                              <th mat-header-cell *matHeaderCellDef> Voter </th>
-                              <td mat-cell *matCellDef="let vote">
-                                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( vote.voter ) : false; else elseVetoVoter">
-                                  {{ (appState | async).valsMap.get( vote.voter )}}
-                                </span>
-                                <ng-template #elseVetoVoter>{{ vote.voter }}</ng-template>
-                              </td>
-                            </ng-container>
-                        
-                            <ng-container matColumnDef="vote">
-                              <th mat-header-cell *matHeaderCellDef> Vote </th>
-                              <td mat-cell *matCellDef="let vote"> {{vote.option}} </td>
-                            </ng-container>
-                        
-                            <tr mat-header-row *matHeaderRowDef="votesDisplayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: votesDisplayedColumns;"></tr>
-                          </table>
-                          <!-- <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator> -->
+                          <div class="row table-responsive text-nowrap scrollbar-primary">
+                            <table mat-table [dataSource]="votesDataSource" class="table large-header">
+                              <ng-container matColumnDef="voter">
+                                <th mat-header-cell *matHeaderCellDef> Voter </th>
+                                <td mat-cell *matCellDef="let vote">
+                                  <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( vote.voter ) : false; else elseVetoVoter">
+                                    {{ (appState | async).valsMap.get( vote.voter )}}
+                                  </span>
+                                  <ng-template #elseVetoVoter>{{ vote.voter }}</ng-template>
+                                </td>
+                              </ng-container>
+                          
+                              <ng-container matColumnDef="vote">
+                                <th mat-header-cell *matHeaderCellDef> Vote </th>
+                                <td mat-cell *matCellDef="let vote"> {{vote.option}} </td>
+                              </ng-container>
+                          
+                              <tr mat-header-row *matHeaderRowDef="votesDisplayedColumns"></tr>
+                              <tr mat-row *matRowDef="let row; columns: votesDisplayedColumns;"></tr>
+                            </table>
+                          </div>
                         </mat-tab>
                         <mat-tab label="NoWithVeto">
-                          <table mat-table [dataSource]="votesDataSource" class="table large-header">
-                            <ng-container matColumnDef="voter">
-                              <th mat-header-cell *matHeaderCellDef> Voter </th>
-                              <td mat-cell *matCellDef="let vote">
-                                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( vote.voter ) : false; else elseVetoVoter">
-                                  {{ (appState | async).valsMap.get( vote.voter )}}
-                                </span>
-                                <ng-template #elseVetoVoter>{{ vote.voter }}</ng-template>
-                              </td>
-                            </ng-container>
-                        
-                            <ng-container matColumnDef="vote">
-                              <th mat-header-cell *matHeaderCellDef> Vote </th>
-                              <td mat-cell *matCellDef="let vote"> {{vote.option}} </td>
-                            </ng-container>
-                        
-                            <tr mat-header-row *matHeaderRowDef="votesDisplayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: votesDisplayedColumns;"></tr>
-                          </table>
-                          <!-- <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator> -->
+                          <div class="row table-responsive text-nowrap scrollbar-primary">
+                            <table mat-table [dataSource]="votesDataSource" class="table large-header">
+                              <ng-container matColumnDef="voter">
+                                <th mat-header-cell *matHeaderCellDef> Voter </th>
+                                <td mat-cell *matCellDef="let vote">
+                                  <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( vote.voter ) : false; else elseVetoVoter">
+                                    {{ (appState | async).valsMap.get( vote.voter )}}
+                                  </span>
+                                  <ng-template #elseVetoVoter>{{ vote.voter }}</ng-template>
+                                </td>
+                              </ng-container>
+                          
+                              <ng-container matColumnDef="vote">
+                                <th mat-header-cell *matHeaderCellDef> Vote </th>
+                                <td mat-cell *matCellDef="let vote"> {{vote.option}} </td>
+                              </ng-container>
+                          
+                              <tr mat-header-row *matHeaderRowDef="votesDisplayedColumns"></tr>
+                              <tr mat-row *matRowDef="let row; columns: votesDisplayedColumns;"></tr>
+                            </table>
+                          </div>
                         </mat-tab>
                         <mat-tab label="Abstain">
-                          <table mat-table [dataSource]="votesDataSource" class="table large-header">
-                            <ng-container matColumnDef="voter">
-                              <th mat-header-cell *matHeaderCellDef> Voter </th>
-                              <td mat-cell *matCellDef="let vote">
-                                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( vote.voter ) : false; else elseVetoVoter">
-                                  {{ (appState | async).valsMap.get( vote.voter )}}
-                                </span>
-                                <ng-template #elseVetoVoter>{{ vote.voter }}</ng-template>
-                              </td>
-                            </ng-container>
-                        
-                            <ng-container matColumnDef="vote">
-                              <th mat-header-cell *matHeaderCellDef> Vote </th>
-                              <td mat-cell *matCellDef="let vote"> {{vote.option}} </td>
-                            </ng-container>
-                        
-                            <tr mat-header-row *matHeaderRowDef="votesDisplayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: votesDisplayedColumns;"></tr>
-                          </table>
-                          <!-- <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator> -->
+                          <div class="row table-responsive text-nowrap scrollbar-primary">
+                            <table mat-table [dataSource]="votesDataSource" class="table large-header">
+                              <ng-container matColumnDef="voter">
+                                <th mat-header-cell *matHeaderCellDef> Voter </th>
+                                <td mat-cell *matCellDef="let vote">
+                                  <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( vote.voter ) : false; else elseVetoVoter">
+                                    {{ (appState | async).valsMap.get( vote.voter )}}
+                                  </span>
+                                  <ng-template #elseVetoVoter>{{ vote.voter }}</ng-template>
+                                </td>
+                              </ng-container>
+                          
+                              <ng-container matColumnDef="vote">
+                                <th mat-header-cell *matHeaderCellDef> Vote </th>
+                                <td mat-cell *matCellDef="let vote"> {{vote.option}} </td>
+                              </ng-container>
+                          
+                              <tr mat-header-row *matHeaderRowDef="votesDisplayedColumns"></tr>
+                              <tr mat-row *matRowDef="let row; columns: votesDisplayedColumns;"></tr>
+                            </table>
+                          </div>
                         </mat-tab>
                       </mat-tab-group>
                       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
