--- a/src/app/components/txs/txs-list-card/txs-list-card.component.html
+++ b/src/app/components/txs/txs-list-card/txs-list-card.component.html
@@ -12,6 +12,11 @@
                     <th mat-header-cell *matHeaderCellDef> Hash </th>
                     <td mat-cell *matCellDef="let tx">
                       {{ tx.txhash }}
+                      <i  class="ion-ios-copy copy-button" 
+                          style="cursor: pointer;" 
+                          ngxClipboard [cbContent]="tx.txhash" 
+                          (click)="onCopySuccess()">
+                      </i>
                     </td>
                   </ng-container>
               
@@ -32,6 +37,11 @@
                     <th mat-header-cell *matHeaderCellDef> Hash </th>
                     <td mat-cell *matCellDef="let tx">
                       {{ tx.txhash }}
+                      <i  class="ion-ios-copy copy-button" 
+                          style="cursor: pointer;" 
+                          ngxClipboard [cbContent]="tx.txhash" 
+                          (click)="onCopySuccess()">
+                      </i>
                     </td>
                   </ng-container>
               
