Fixed small bug with random 404 on startup

--- a/src/app/components/charts/chart-cards/chart-cards.component.html
+++ b/src/app/components/charts/chart-cards/chart-cards.component.html
@@ -77,7 +77,7 @@
                     height="197"
                     width="394"
                     [chartType]="radarChartType"
-                    [data]="radarChartDatasets"
+                    [datasets]="radarChartDatasets"
                     [labels]="radarChartLabels"
                     [options]="radarChartOptions"
                     [legend]="true"
