--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -9,7 +9,9 @@
           
                 <!--Avatar-->
                 <div class="avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded-circle">
+                  <img 
+                    src="https://ui-avatars.com/api/?size=50&name={{validator.description.moniker}}" 
+                    class="rounded-circle">
                 </div>
           
                 <mdb-card-body>
